--- a/resource/config.json
+++ b/resource/config.json
@@ -1,5 +1,5 @@
 {
-  "apiKey": "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",
+  "apiKey": "",
   "proxyUrl": "",
   "model": "gpt-3.5-turbo-0613",
   "dev": false
